--- a/e-commerce book store frontend/Pages/book-filter.html
+++ b/e-commerce book store frontend/Pages/book-filter.html
@@ -76,7 +76,7 @@
           </div>
         </div>
       </nav>
-    </header>d
+    </header>
     <div class="breadcrumb-container">
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
